--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:fPW3BlP5+8YbKQLq1u8unLe5/NjuH6svYnEMzp9l5lY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -15,7 +15,7 @@ DB_DATABASE=exousia_navi
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -43,13 +43,13 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1673081
+PUSHER_APP_KEY=4ef07d09e997c8b8f24b
+PUSHER_APP_SECRET=fcb15701d88e50bdeede
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_CLUSTER=ap1
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
